--- a/index.html
+++ b/index.html
@@ -966,143 +966,144 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="skills">
-        <div class="container">
-            <h2 class="section-title">My Skills</h2>
-            <div class="skills-content">
-                <div class="skill-category">
-                    <h3>Programming Languages</h3>
-                    <ul class="skill-list">
-                        <li>Python</li>
-                        <li>C / C++</li>
-                        <li>JavaScript</li>
-                        <li>Java</li>
-                    </ul>
-                </div>
-                <div class="skill-category">
-                    <h3>Frameworks & Libraries</h3>
-                    <ul class="skill-list">
-                        <li>React.js</li>
-                        <li>Laravel</li>
-                        <li>SQL</li>
-                        <li>REST APIs</li>
-                        <li>Node.js</li>
-                    </ul>
-                </div>
-                <div class="skill-category">
-                    <h3>Security Tools</h3>
-                    <ul class="skill-list">
-                        <li>Burp Suite</li>
-                        <li>Python Scripting</li>
-                        <li>Gobuster</li>
-                        <li>Nuclei</li>
-                        <li>MITM Proxy</li>
-                    </ul>
-                </div>
-                <div class="skill-category">
-                    <h3>Other Technologies</h3>
-                    <ul class="skill-list">
-                        <li>Git</li>
-                        <li>Firebase</li>
-                        <li>Wireshark</li>
-                        <li>Django</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Projects Section
-
-
-
-    <!-- Projects Section -->
-    <section id="projects" class="projects">
-        <div class="container">
-            <h2 class="section-title">My Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-img">Pass</div>
-                    <div class="project-info">
-                        <h3>SecurePass</h3>
-                        <p>Developed a cybersecurity-focused web application to analyze password strength.</p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Html&Css</span>
-                            <span class="tech-tag">API Testing</span>
-                            <span class="tech-tag">Security</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-img">SEC</div>
-                    <div class="project-info">
-                        <h3>Secure Authentication System</h3>
-                        <p>Built a robust authentication system implementing multi-factor authentication, password policies, and session management with protection against common attacks.</p>
-                        <div class="project-tech">
-                            <span class="tech-tag">JavaScript</span>
-                            <span class="tech-tag">Node.js</span>
-                            <span class="tech-tag">Authentication</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-img">WEB</div>
-                    <div class="project-info">
-                        <h3>Vulnerability Reporting Platform</h3>
-                        <p>Created a web application for security researchers to report vulnerabilities to organizations with features for tracking, validation, and remediation progress.</p>
-                        <div class="project-tech">
-                            <span class="tech-tag">React</span>
-                            <span class="tech-tag">Firebase</span>
-                            <span class="tech-tag">Security</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Achievements Section -->
-    <section id="achievements" class="achievements">
-        <div class="container">
-            <h2 class="section-title">Achievements</h2>
-            <div class="achievements-grid">
-                <div class="achievement-card">
-                    <h3>Bug Bounty Success</h3>
-                    <p>Successfully identified and reported critical vulnerabilities in multiple web applications, earning recognition and rewards from companies like Microsoft and Oracle.</p>
-                </div>
-                <div class="achievement-card">
-                    <h3>CTF Competitions</h3>
-                    <p>Ranked in the top 5% in several international Capture The Flag competitions, demonstrating expertise in web exploitation, cryptography, and reverse engineering.</p>
-                </div>
-                <div class="achievement-card">
-                    <h3>Open Source Contributions</h3>
-                    <p>Contributed security patches to popular open-source projects, helping to protect thousands of users from potential exploits.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
- <!-- Certifications Section -->
-<section id="certifications" class="achievements">
+<section id="skills" class="skills">
     <div class="container">
-        <h2 class="section-title">Certifications</h2>
-        <div class="achievements-grid">
-            <div class="achievement-card">
-                <h3>Cloud Computing</h3>
-                <p>By Coursera</p>
+        <h2 class="section-title">My Skills</h2>
+        <div class="skills-content">
+            <div class="skill-category">
+                <h3>Programming Languages</h3>
+                <ul class="skill-list">
+                    <li>Python</li>
+                    <li>C / C++</li>
+                    <li>JavaScript</li>
+                    <li>Java</li>
+                </ul>
             </div>
-            <div class="achievement-card">
-                <h3>Mastering Data Structure & Algorithm using C and C++</h3>
-                <p>By Udemy</p>
+            <div class="skill-category">
+                <h3>Frameworks & Libraries</h3>
+                <ul class="skill-list">
+                    <li>React.js</li>
+                    <li>Laravel</li>
+                    <li>SQL</li>
+                    <li>REST APIs</li>
+                    <li>Node.js</li>
+                </ul>
             </div>
-            <div class="achievement-card">
-                <h3>Full Stack Web Development</h3>
-                <p>By Coursera</p>
+            <div class="skill-category">
+                <h3>Security Tools</h3>
+                <ul class="skill-list">
+                    <li>Burp Suite</li>
+                    <li>Python Scripting</li>
+                    <li>Gobuster</li>
+                    <li>Nuclei</li>
+                    <li>MITM Proxy</li>
+                </ul>
+            </div>
+            <div class="skill-category">
+                <h3>Other Technologies</h3>
+                <ul class="skill-list">
+                    <li>Git</li>
+                    <li>Firebase</li>
+                    <li>Wireshark</li>
+                    <li>Django</li>
+                </ul>
             </div>
         </div>
     </div>
 </section>
 
+<!-- Projects Section -->
+<section id="projects" class="projects">
+    <div class="container">
+        <h2 class="section-title">My Projects</h2>
+        <div class="projects-grid">
+            <div class="project-card">
+                <div class="project-img">Pass</div>
+                <div class="project-info">
+                    <h3>SecurePass - Password Strength Analyzer</h3>
+                    <p>Developed a cybersecurity-focused web application to analyze password strength with real-time assessment, suggestions, and interactive UI.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">HTML</span>
+                        <span class="tech-tag">CSS</span>
+                        <span class="tech-tag">JavaScript</span>
+                        <span class="tech-tag">Node.js</span>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">Queen</div>
+                <div class="project-info">
+                    <h3>N-Queen Visualizer</h3>
+                    <p>Designed a visualization tool for the N-Queens problem with dynamic board size modification and optimized performance.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">HTML</span>
+                        <span class="tech-tag">CSS</span>
+                        <span class="tech-tag">JavaScript</span>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">Food</div>
+                <div class="project-info">
+                    <h3>Food Delivery System (Frontend)</h3>
+                    <p>Designed a responsive food delivery website providing a seamless browsing and ordering experience.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">HTML</span>
+                        <span class="tech-tag">CSS</span>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">Console</div>
+                <div class="project-info">
+                    <h3>Food Delivery System in C</h3>
+                    <p>Developed a console-based food delivery system showcasing structured programming and file handling skills.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">C Language</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Achievements Section -->
+<section id="achievements" class="achievements">
+    <div class="container">
+        <h2 class="section-title">Achievements</h2>
+        <div class="achievements-grid">
+            <div class="achievement-card">
+                <h3>Research Paper on Cryptography Integration</h3>
+                <p>Published a paper exploring advanced encryption algorithms for enhancing data security and privacy in digital communication systems. (June 2023)</p>
+            </div>
+            <div class="achievement-card">
+                <h3>Community Development Program (CDP)</h3>
+                <p>Participated in a community development program, assisting underprivileged people in education, skill development, and health awareness. (June 2023)</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Certifications Section -->
+<section id="certifications" class="achievements">
+    <div class="container">
+        <h2 class="section-title">Certifications</h2>
+        <div class="achievements-grid">
+            <div class="achievement-card">
+                <h3>Data Structures and Algorithms - Self-Paced</h3>
+                <p>Online Course</p>
+            </div>
+            <div class="achievement-card">
+                <h3>Cloud Computing</h3>
+                <p>NPTEL</p>
+            </div>
+            <div class="achievement-card">
+                <h3>CompTIA Security+ (SY0-601)</h3>
+                <p>Certification</p>
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- Education Section -->
     <section id="education" class="education">
